--- a/src/main/resources/templates/admin-detail.html
+++ b/src/main/resources/templates/admin-detail.html
@@ -115,7 +115,7 @@
                                     </div>
                                     <div class="col text-end">
                                         <button type="submit" class="btn btn-outline-success">수정</button>
-                                        <a th:href="@{'/admin/delete/'+${adminDto.getAdminId()}}" class="btn btn-outline-danger">삭제</a>
+                                        <a th:href="@{'/admin/delete/'+${adminNum}}" class="btn btn-outline-danger">삭제</a>
                                     </div>
                                 </div>
                                 <div class="row">
