--- a/src/main/resources/templates/main-page.html
+++ b/src/main/resources/templates/main-page.html
@@ -3,56 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>메인 페이지</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-    <style>
-        .white{
-            background-color: white;
-            border-bottom: 1px solid rgb(236, 236, 236);
-            margin : 10px;
-        }
-        @keyframes slideIn {
-            0% {
-                opacity: 0;
-                transform: translateY(-50px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        @keyframes slideInDown {
-            0% {
-                opacity: 0;
-                transform: translateY(50px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        @keyframes slideInRight {
-            0% {
-                opacity: 0;
-                transform: translateX(50px);
-            }
-            100% {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
-        .box1, .box4 {
-            animation: slideIn 1.5s ease forwards;
-        }
-        .box2, .box3, .box5 {
-            animation : slideInDown 1.5s ease forwards;
-        }
-        .box6 {
-            animation : slideInRight 1.5s ease forwards;
-        }
-    </style>
-</head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <title>Document</title>
+    <link th:href="@{/css/style.css}" rel="stylesheet" /></head>
 <body>
 <div class="container-fluid">
     <div class="row white">
@@ -64,151 +20,119 @@
             <a type="button" href="/admin/login" class="btn btn-primary btn-lg me-5">로그인</a>
         </div>
     </div>
-    <div class="row m-3">
-        <div class="col-5">
-            <div class="row">
-                <div class="col">
-                    <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box1">
-                        <div class="row my-2">
-                            <div class="col">
-                                <img src="/image/AR.png" class="img-fluid" style="width : 40%;">
-                            </div>
-                            <div class="col text-start">
-                                <div class="row text-start">
-                                    <h1 class="col text-start">
-                                        교내 통합 대시보드
-                                    </h1>
-                                </div>
-                                <br><br>
-                                <div class="row mt-5 pt-5">
-                                    <h4 class="col text-start" style="color:rgb(111,120,133)">
-                                        교내 다양한 정보를<br>
-                                        대시보드를 통해<br>
-                                        한눈에 확인합니다<br>
-                                    </h4>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+    <div class="row align-items-center mt-5">
+        <div class="container mt-5">
+            <div class="row ms-3">
+                <div class="col-1 ps-5 offset-1 d-flex justify-content-center align-items-center">
+                    <button class="main-page-button" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="prev"><i class="bi bi-caret-left-fill fs-3"></i></button>
                 </div>
-            </div>
-            <div class="row mt-3">
-                <div class="col">
-                    <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box2" style="width:22rem;">
-                        <div class="row mt-4">
-                            <div class="col">
-                                <div style="z-index: 3;">
-                                    &nbsp;&nbsp;<br>
-                                    <img src="/image/Congratulate.png" class="mt-5 pt-5 ms-3 ps-2" style="width:100%">
-                                    <br>
-
-                                </div>
-                                <div style="z-index: 5; position: absolute; left:7%; top:7%;" class="text-start">
-                                    <h1>
-                                        교내<br>
-                                        행사정보<br>
-                                        제공<br>
-                                    </h1>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card shadow text-center m-1 bg-body-tertiary rounded border border-0 box3" style="width:22rem;">
-                        <div class="row">
-                            <div class="col text-start">
-                                <div class="row text-start">
-                                    <div class="col-6 ms-3">
-                                        <img src="/image/building_buttom.png" class="img-fluid">
+                <div class="col-8 pe-5">
+                    <div id="carouselExampleRide" class="carousel slide" data-bs-ride="true">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div class="row">
+                                    <div class="col-4 offset-2">
+                                        <img src="/image/AI_path_prediction.png" class="img-fluid" style="width:73.9%;">
                                     </div>
-                                </div>
-                                <div class="row text-center my-4">
-                                    <h1 class="col">
-                                        건물 별<br>
-                                        상세 정보
-                                    </h1>
-                                </div>
-                                <div class="row justify-content-end">
-                                    <div class="col-6 align-self-end me-5">
-                                        <img src="/image/building_top.png" class="img-fluid">
+                                    <div class="col-6 text-start mt-3">
+                                        <div class="mb-5 pb-5">
+                                            <div class="text-ai" style="height:15vh">AI</div>
+                                            <div class="sidebarItem fs-1">소요시간 예측</div>
+                                        </div>
+                                        <div class="mt-5 pt-5 fs-3 sidebarItem">
+                                            <span class="fontHv">개인별 이동 시간 데이터</span>를<br>
+                                            바탕으로 교내 <span class="fontHv">이동시간</span>을 예측합니다
+                                        </div>
                                     </div>
                                 </div>
                             </div>
+                            <div class="carousel-item">
+                                <div class="row mt-2">
+                                    <div class="col-3 offset-1 text-center mt-3 align-items-center">
+                                        <img src="/image/AR2.PNG" style="width: 96.5%">
+                                    </div>
+                                    <div class="col-3 text-center mt-3 align-items-center">
+                                        <img src="/image/AR1.PNG" style="width : 96.5%">
+                                    </div>
+                                    <div class="col-5">
+                                        <div class="mb-2 mt-3">
+                                            <div>
+                                                <span class="fontHv fs-1">진화된</span>
+                                            </div>
+                                            <div>
+                                                <span class="text-ar" style="height:15vh">AR</span><span class="fontHv fs-1">&nbsp;서비스</span>
+                                            </div>
+                                        </div>
+                                        <div class="mt-4 pt-4 fs-3 nodeHeader">
+                                            내 손 안에 가천대학교,
+                                        </div>
+                                        <div class="sidebarItem fs-2 mt-2">
+                                            AR 캠퍼스 투어
+                                        </div>
+                                        <div class="sidebarItem fs-2 mt-2">
+                                            AR 네비게이션
+                                        </div>
+                                        <div class="fs-3 nodeHeader mt-2">
+                                            새로운 세상을 탐험해보세요!
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-1">
+                                    <div class="col-3 offset-1 mb-1">
+                                        <img src="/image/building-1.png" class="pb-1" style="width : 96.5%;">
+                                    </div>
+                                    <div class="col-3 mt-3">
+                                        <img src="/image/building-2.png" class="pt-1" style="width : 96.5%;">
+                                    </div>
+                                    <div class="col-5 fs-1 mt-5">
+                                        <div class="sidebarItem">건물&nbsp;별</div>
+                                        <div class="fontHv mb-5 pb-5" style="font-size : 5rem;">상세정보</div>
+                                        <div class="nodeHeader fs-3 mt-5 pt-5">교내 건물의 <span class="sidebarItem">상세정보</span>를<br>확인할 수 있습니다</div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="carousel-item">
+                                <div class="row mt-1">
+                                    <div class="col-3 offset-1 mb-1">
+                                        <img src="/image/event-1.png" class="pb-1" style="width : 96.5%;">
+                                    </div>
+                                    <div class="col-3 mt-3">
+                                        <img src="/image/event-2.png" class="pt-1" style="width : 96.5%;">
+                                    </div>
+                                    <div class="col-5 fs-1 mt-5">
+                                        <div class="sidebarItem">교내</div>
+                                        <div class="fontHv mb-5 pb-5" style="font-size : 5rem;">행사정보</div>
+                                        <div class="nodeHeader fs-3 mt-5 pt-5">교내의 <span class="sidebarItem">행사정보</span>를<br>확인할 수 있습니다</div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
-            </div>
-        </div>
-        <div class="col-4">
-            <div class="card shadow text-center bg-body-tertiary rounded border border-0 mt-1 box4">
-                <div class="row align-items-center mt-2 mb-1">
-                    <div class="col-5">
-                        <img src="/image/AI-PATH.PNG" class="img-fluid" style="width: 66%;">
-                    </div>
-                    <div class="col-7 text-start">
-                        <h1>나만의 경로별</h1>
-                        <h1 class="m-3">AI 소요시간 예측</h1>
-                    </div>
-                </div>
-            </div>
-            <div class="card shadow text-center my-1 bg-body-tertiary rounded border border-0 mt-4 box5">
-                <div class="row align-items-center">
-                    <div class="col mt-3 text-center">
-                        <img src="/image/AI-remove.png" class="img-fluid p-3">
-                    </div>
-                </div>
-                <div class="row mt-5">
-                    <div class="col">
-                        <h1 class="text-center">나만의 AI 소요시간</h1>
-                        <h5 class="mt-3" style="color:rgb(111,120,133)">개인별 이동시간 및 다양한 데이터를 활용한<br> 교내 이동시간 예측</h5>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="col-3">
-            <div class="card shadow text-center mt-1 ms-1 me-1 bg-body-tertiary rounded border border-0 box6">
-                <div class="row p-1 m-3">
-                    <div class="col-6">
-                        <h1 class="text-start">진화된</h1>
-                        <h1 class="text-end">AR 서비스</h1>
-                        <br><br><br><br><br>
-                        <img src="/image/AR2.PNG" class="img-fluid">
-                    </div>
-                    <div class="col-6">
-                        <img src="/image/AR1.PNG" class="img-fluid ms-4">
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <br>
-                        <h5 class="text-end ms-4" style="color:rgb(111,120,133)">내 손에 가천대학교</h5>
-                        <h5 class="text-end ms-4" style="color:rgb(111,120,133)">AR 기술과 함께 즐겨보세요</h5>
-                    </div>
-                </div>
-                <div class="row mt-5 mb-4">
-                    <div class="col text-center">
-                        <h2>AR캠퍼스 투어</h2>
-                        <h2>AR 내비게이션</h2>
-                        <h2>새로운 세상을 탐험해보세요!</h2>
-                    </div>
+                <div class="col-1 pe-5 d-flex justify-content-center align-items-center">
+                    <button class="main-page-button" type="button" data-bs-target="#carouselExampleRide" data-bs-slide="next"><i class="bi bi-caret-right-fill fs-3"></i></button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-</body>
+<script type="text/javascript" th:src="@{/js/app.js}"></script>
 <script>
-    window.onload = function() {
-        var boxes = document.querySelectorAll('.box1, .box2, .box3, .box4, .box5, .box6');
-        boxes.forEach(function(box) {
-            box.style.animationPlayState = 'paused'; // 애니메이션 일시 중지
-            setTimeout(function() {
-                box.style.animationPlayState = 'running'; // 일정 시간 후 애니메이션 실행
-            }, 100);
-        });
-    };
+    var myCarousel = document.querySelector('#myCarousel');
+    var carousel = new bootstrap.Carousel(myCarousel);
 
+    document.getElementById('prev').addEventListener('click', function() {
+        var carousel = new bootstrap.Carousel(document.querySelector('#carouselExampleRide'));
+        carousel.prev();
+    });
+
+    // 다음 버튼 클릭 시
+    document.getElementById('next').addEventListener('click', function() {
+        var carousel = new bootstrap.Carousel(document.querySelector('#carouselExampleRide'));
+        carousel.next();
+    });
 </script>
+</body>
 </html>
